--- a/first_project/index.html
+++ b/first_project/index.html
@@ -6,6 +6,6 @@
     <title>first_project</title>
 </head>
 <body>
-    <h1>Hello world frrom Electron</h1>
+    <h1>Hello world from Electron</h1>
 </body>
 </html>
